--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,17 +32,17 @@
                 <action android:name="android.nfc.action.NDEF_DISCOVERED" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <data   android:host="ext"
-                    android:pathPrefix="/vandierendonck.co:nfcapp"
-                    android:scheme="vnd.android.nfc" />
+                        android:pathPrefix="/vandierendonck.co:trionfinfc"
+                        android:scheme="vnd.android.nfc" />
             </intent-filter>
         </activity>
         <activity android:name=".views.NfcWriteActivity">
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED" />
                 <category android:name="android.intent.category.DEFAULT" />
-                <data   android:host="ext"
-                        android:pathPrefix="/vandierendonck.co:nfcapp"
-                        android:scheme="vnd.android.nfc" />
+                <!--<data   android:host="ext"
+                        android:pathPrefix="/vandierendonck.co:trionfinfc"
+                        android:scheme="vnd.android.nfc" />-->
             </intent-filter>
         </activity>
     </application>
