--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,8 @@ dependencies {
     implementation "android.arch.persistence.room:rxjava2:$archRoomVersion"
     implementation "org.jetbrains.anko:anko-common:$ankoVersion"
     implementation "org.jetbrains.anko:anko-design:$ankoVersion"
-    implementation "android.arch.lifecycle:extensions:1.0.0"
+    implementation "android.arch.lifecycle:extensions:1.1.0"
+    implementation 'com.android.support:preference-v14:26.1.0'
 
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     androidTestImplementation "com.android.support.test:runner:$runnerVersion"
