--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,10 @@
                         android:scheme="vnd.android.nfc" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".views.SettingsActivity"
+            android:label="Preferences">
+        </activity>
     </application>
 
 </manifest>
